--- a/src/containers/System/UserManager.scss
+++ b/src/containers/System/UserManager.scss
@@ -46,3 +46,38 @@
 .btn-delete {
   @include btn(rgb(235, 15, 15));
 }
+
+.modal-user-container {
+  .modal-content {
+    .modal-header {
+      button {
+        background-color: transparent !important;
+        color: white;
+        border: none;
+        font-size: 27px;
+      }
+    }
+  }
+
+  .modal-user-body {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    .input-container {
+      width: 49%;
+      display: flex;
+      flex-direction: column;
+
+      &.max-width-input {
+        width: 100%;
+      }
+      input {
+        border-radius: 4px;
+        border: 1px solid gray;
+        outline: none;
+        padding: 10px;
+        height: 30px;
+      }
+    }
+  }
+}
