--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -118,6 +118,7 @@
 
   .content-dow {
     height: 35%;
+    padding-bottom: 10px;
     display: flex;
     align-items: flex-end;
     justify-content: center;
